--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,7 @@
+@tailwind base; /* stylelint-disable-line*/
+@tailwind components; /* stylelint-disable-line*/
+@tailwind utilities; /* stylelint-disable-line*/
+
 #root {
   max-width: 100vw;
   margin: 0 auto;
